# lambda-box-extraction

./: .gitignore  Makefile  README.md  _CoqProject  continue_out.txt  gen.py  out.txt  rocq-lambda-box-extraction.opam  rocq-peregrine.opam  start_out.txt  xid_continue_ranges  xid_start_ranges  xid_test
.github/: rocq-lambda-box-extraction.opam.locked  rocq-peregrine.opam.locked
.nix/: config.nix
benchmarks/: _CoqProject
hs-lib/: Makefile  lambdabox.cabal
lean_frontend/: .gitignore  LeanToLambdaBox.lean  README.md  lake-manifest.json
peregrine/: .gitattributes  README.md  _CoqProject  rocq-peregrine.opam
peregrine/doc/: tasks.md
peregrine/plugin/: _CoqProject  template-rocq-files.txt
peregrine/src/extraction/: .gitignore
peregrine/src/printC/: caml_ascii_string.ml  caml_byte.mli  caml_bytestring.ml  caml_nat.ml  caml_nat.mli  camlcoq.ml  printClight.ml
peregrine/test/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
peregrine/test/lean/: lake-manifest.json
peregrine/test/src/: c.ts  elm.ts  rust.ts  wasm.ts
peregrine/test/src/elm/: elm.json
peregrine/test/src/ocaml/: types.ml  types.mli
peregrine/test/src/rust/: Cargo.toml
peregrine/theories/: Config.v  Extraction.v
peregrine/theories/backends/: OCamlBackend.v  WasmBackend.v
peregrine/theories/erasure/: ERemapInductives.v  Transforms.v
peregrine/theories/serialization/: SerializeConfigSound.v
plugin/: Makefile  _PluginProject  fix_extraction.patch  process_extraction.sh
test/: package-lock.json
theories/: CheckWf.v  Config.v  ConfigUtils.v  Extraction.v  (+8 more)
(+121 files in other folders)
