opam-version: "2.0"
name: "rocq-peregrine"
version: "dev"
synopsis: "The Peregrine tool is a unified middle-end for code generation from proof assistants"
description: """
The Peregrine tool is a unified middle-end for code generation from proof assistants
"""
maintainer: "The Peregrine team"
authors: "The Peregrine team"
license: "MIT"

depends: [
  "rocq-core" {= "9.0.0"}
  "rocq-stdlib" {>= "9.0" & < "9.1~"}
  "rocq-metarocq-utils" {= "1.4+9.0"}
  "rocq-metarocq-common" {= "1.4+9.0"}
  "rocq-metarocq-template" {= "1.4+9.0"}
  "rocq-metarocq-template-pcuic" {= "1.4+9.0"}
  "rocq-metarocq-pcuic" {= "1.4+9.0"}
  "rocq-metarocq-safechecker" {= "1.4+9.0"}
  "rocq-metarocq-safechecker-plugin" {= "1.4+9.0"}
  "rocq-metarocq-erasure" {= "1.4+9.0"}
  "rocq-metarocq-erasure-plugin" {= "1.4+9.0"}
  "rocq-typed-extraction-common" {= "dev"}
  "rocq-rust-extraction" {= "dev"}
  "rocq-elm-extraction" {= "dev"}
  "rocq-cakeml-extraction" {= "dev"}
  "rocq-verified-extraction" {= "dev"}
  "rocq-primitive" {= "9.0.0"}
  "coq-ceres" {= "dev"}
  "coq-certicoq" {= "dev"}
  "coq-compcert" {= "3.16"}
  "cmdliner" {< "2.0.0"}
  "menhir" {>= "20200624" & < "20260122"}
  "coq-menhirlib" {>= "20200624" & < "20260112"}
]

build: [ make "build" ]
install: [ make "install" ]

tags: [
  "keyword:extraction"
  "logpath:Peregrine"
]
